@@ -10,13 +10,16 @@
       android:targetSdkVersion="22"/>
    
 <application 
-    android:allowBackup="true"
+    android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:largeHeap="true"
+    android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar"
     >
     <!-- 
+    android:theme="@android:style/Theme.Light"
     android:theme="@android:style/Theme.DeviceDefault"
+    android:theme="@android:style/Theme.DeviceDefault.Light"
     android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar"
     android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
     android:theme="@android:style/Theme.Material.Light"
