@@ -5,6 +5,18 @@ Droid48sx CHANGELOG
 https://play.google.com/store/apps/details?id=org.czo.droid48sx
 sources on https://github.com/czodroid/droid48sx
 
+- 30 Jan 2016
+ * Intended to work from android 2.2 to 6.x on armeabi, armeabi-v7a,
+   arm64-v8a, mips, mips64, x86 and x86_64 architectures
+ * New amazing skin, should be more readable on big screens
+ * New action bar with icons and menu when touching HP48sx screen
+ * New icon
+ * Complete fullscreen for android 4.4, 5.x and 6.x
+
+- 24 Aug 2015
+ * Corrected port2 settings
+ * Haptic feedback disabled by default, but can be re-enabled
+
 - 26 Jan 2014
  * Corrected "put program on stack" bug
  * Corrected FC bug on android 4.3
